# personalCallAssistant

./: .env.example  .gitignore  CLAUDE.md  README.md  design_idea_2.html  idea.md  package-lock.json  package.json  plan.md  ui.md
design/: prototype.html  sidebar-prototype.jsx  ui-spec.md
docs/: architecture.md  mvp.md  roadmap.md  vision.md
spikes/: .gitignore  Cargo.toml  README.md  RUN-s1.md  RUN-s2.md  RUN-s3.md  RUN-s4.md  fetch-model.sh
spikes/models/: models.md
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: capture_smoke.rs  fetch_model.rs  transcribe_smoke.rs
src-tauri/src/: commands.rs  config.rs  error.rs  events.rs  lib.rs  main.rs
src-tauri/src/ai/: analyze.rs  chat.rs  live.rs  mod.rs  prompts.rs
src-tauri/src/audio/: capture.rs  mod.rs  vad.rs  wav.rs
src-tauri/src/session/: manager.rs  mod.rs  model.rs
src-tauri/src/storage/: mod.rs  schema.rs
src-tauri/src/stt/: mod.rs  model_mgr.rs
src/lib/: format.ts  ipc.ts  mock.ts  stores.ts  types.ts
src/lib/components/: ConfirmDialog.svelte  LabelChip.svelte  LabelManager.svelte  Mark.svelte  Modal.svelte  StatusPill.svelte  Toasts.svelte
src/lib/screens/: Dashboard.svelte  Live.svelte  NewSession.svelte  Onboarding.svelte  Post.svelte  Settings.svelte
src/lib/styles/: app.css
src/routes/: +page.svelte
