[package]
name = "call-assistant"
version = "0.1.0"
description = "Personal Call Assistant"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "call_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Audio capture + STT-feed pipeline (M2). cpal 0.16 matches the validated M0/S3
# dual-capture spike; rubato resamples device-rate audio to the 16 kHz mono
# Whisper wants; hound writes the stereo ground-truth WAV; crossbeam-channel
# carries the hot capture→worker path off the real-time audio callback.
cpal = "0.16"
rubato = "3.0"
hound = "3.5"
crossbeam-channel = "0.5"
# Local STT (M2/PR2). whisper-rs 0.16 + `metal` (Apple-Silicon GPU) matches the
# validated M0/S1 spike; reqwest downloads ggml models (resumable) for model_mgr.
whisper-rs = { version = "0.16", features = ["metal"] }
reqwest = { version = "0.12", features = ["blocking"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
dirs = "5"

# whisper.cpp is unbearably slow without optimization, even in dev builds. Build
# all dependencies optimized so local STT reflects realistic timings, while
# keeping fast incremental compiles of our own code (mirrors spikes/Cargo.toml).
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

